welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:3: error: not found: value i
	i= i + 1
        ^Program:6: error: not found: value i
for (compt1 <- 1 to i) {recule()
                    ^