welcome.lessons.welcome.loopfor.LoopFor.scala.code
while (!estSurBiscuit()){
  avance()
	i= i + 1
		}
    
for (compt1 <- 1 to i) {recule()
                                  }; 
    poseBiscuit()
